# jumpthegun

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_requirements.txt  tox.ini
.github/workflow/: lint.yml
.github/workflows/: main.yml
docs/: awscli.md
src/: jumpthegun.sh
src/jumpthegun/: config.py  env_vars.py  io_redirect.py  jumpthegunctl.py  output_redirect.py  project.py  runtime_dir.py  testutils.py  tools.py  utils.py
tests/: sleep_and_exit_on_signal.py  test_jumpthegun.py  test_tools.py
tests/testproj/: bad.py  good.py  pyproject.toml
